add light theme

--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
         "label": "Deep Ocean",
         "uiTheme": "vs-dark",
         "path": "./themes/Deep-ocean-color-theme.json"
+      },
+      {
+        "label": "Coral Reef",
+        "uiTheme": "vs",
+        "path": "./themes/Coral-reef-color-theme.json"
       }
     ]
   }
